@@ -1,3 +1,9 @@
+2005-02-20(jol):
+	- add egxp_message_root allowing to get the root message of a message.
+	- try to fix memory leaks and a dirty segfault.
+	- The segfault is always here i'm hunting it !
+	- add sha1 support to use with password.
+	
 2005-02-19(jol):
 	- Fix memory leaks
 	- rename egxp_opcode_display to egxp_opcode_print
